--- a/new_bio.css
+++ b/new_bio.css
@@ -44,6 +44,7 @@ a {
   margin: 0 auto;
 }
 
+
 #main-bio,
 #contact-info,
 #bio-image {
@@ -57,6 +58,10 @@ a {
 #contact-info {
   width: 30%;
 }
+
+#listid{
+list-style-type: none; 
+} 
 
 #bio-image {
   width: 200px;
